# CS3099

project-code-main1/project-code-main/app/backend/: .gitignore  Pipfile  README.md  app.py  config.py  flask_app.py  main.py  pyproject.toml  requirements.txt  start-backend.ps1  start-backend.sh  test.py
project-code-main1/project-code-main/app/backend/auth/: auth.py  basic.py
project-code-main1/project-code-main/app/backend/domain/: model.py
project-code-main1/project-code-main/app/backend/group31_backend/: app.py
project-code-main1/project-code-main/app/backend/group31_backend/endpoints/: club.py  query_endpoint.py  test.py
project-code-main1/project-code-main/app/backend/group31_backend/services/: DBQuery_service.py  backend_new.py  leagues.txt
project-code-main1/project-code-main/app/backend/group32_backend/: app.py
project-code-main1/project-code-main/app/backend/group32_backend/endpoints/: playerdata.py
project-code-main1/project-code-main/app/backend/group33_backend/: Database.db  Database_old.db  app.py
project-code-main1/project-code-main/app/backend/group33_backend/endpoints/: player.py  team.py
project-code-main1/project-code-main/app/backend/group33_backend/services/: Database_README.md  connection_service.py  countries_service.py  (+8 more)
project-code-main1/project-code-main/app/backend/group34_backend/: app.py
project-code-main1/project-code-main/app/backend/services/: database_service.py  player_service.py  player_services31.py  stadium_service.py  wikidata_service.py
project-code-main1/project-code-main/app/backend/utils/: iterutils.py
(+179 files in other folders)
